03.business-os/AICompanyManager/900.meta/white_screen_root_cause_axu_r1_20260501_110001/010_node_check.txt
============================================================
node --check server
============================================================

============================================================
node --check clean core
============================================================
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:3955
      '        <th>期限</th>',\n      '        <th>操作</th>',
                            ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
